...
                    if viewStore.isLoading {
                        ProgressView("Loading posts...")
                    } else {
                        VStack {
                            Text("Post List")
                                .font(.title)
                                .accessibilityIdentifier("PostListTitle")
                            List(viewStore.posts) { post in
                                Button {
                                    viewStore.send(.postTapped(post))
                                } label: {
                                    VStack(alignment: .leading, spacing: 4) {
                                        Text(post.title)
...
